--- a/index.html
+++ b/index.html
@@ -1,67 +1,148 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CAP Garland, LLC</title>
+  <title>A BLOCK BUILDER LLC</title>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background-color: #f0f0f0;
-      color: #333;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Barlow', sans-serif;
+      background-color: #101820;
+      color: #f4f4f4;
     }
     header {
-      background-color: #003366;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #1c1c1c;
+      padding: 20px 40px;
     }
-    section {
-      max-width: 800px;
-      margin: 40px auto;
+    header h1 {
+      font-size: 28px;
+      font-weight: 700;
+    }
+    nav a {
+      color: #f4f4f4;
+      margin-left: 30px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1590658268037-6bf12165a8df?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      height: 90vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: relative;
+    }
+    .hero::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .hero h2 {
+      font-size: 48px;
+      font-weight: 700;
+      color: #fff;
+      position: relative;
+      z-index: 1;
+    }
+    .section {
+      max-width: 1100px;
+      margin: 60px auto;
       padding: 0 20px;
     }
-    h1, h2 {
-      color: #003366;
+    .section h3 {
+      font-size: 28px;
+      margin-bottom: 30px;
+      text-align: center;
     }
-    .contact {
-      background: #fff;
-      padding: 20px;
-      border-left: 5px solid #003366;
-      margin-top: 30px;
+    .card {
+      background: #1f2a33;
+      padding: 30px;
+      border-radius: 10px;
+      margin-bottom: 30px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.4);
+    }
+    .card h4 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #ff3c3c;
+    }
+    .card p {
+      line-height: 1.6;
     }
     footer {
-      background-color: #003366;
-      color: white;
+      background: #0c0c0c;
+      color: #999;
+      padding: 30px 10px;
       text-align: center;
-      padding: 15px;
-      margin-top: 50px;
+      margin-top: 60px;
+    }
+    a {
+      color: #ff3c3c;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>CAP Garland, LLC</h1>
-    <p>Private Investment Fund</p>
+    <h1>A BLOCK BUILDER LLC</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <section>
-    <h2>About Us</h2>
-    <p>CAP Garland, LLC is a Washington-based private investment fund focused on delivering value through diversified investment strategies.</p>
+  <section class="hero">
+    <h2>Plan Better. Build Smarter.</h2>
+  </section>
 
-    <h2>Contact</h2>
-    <div class="contact">
-      <p><strong>Address:</strong> 915 W 2nd Ave, Spokane, WA 99201</p>
-      <p><strong>Email:</strong> <a href="mailto:ryanberg@capgarland.shop">ryanberg@capgarland.shop</a></p>
-      <p><strong>Phone:</strong> (509) 822-3850</p>
+  <section class="section" id="about">
+    <h3>About Us</h3>
+    <div class="card">
+      <p>We are a reliable Arizona-based construction and development company that prioritizes strategic planning and bold execution. At A BLOCK BUILDER LLC, we bring precision and passion to every project we take on. With our experienced leadership and hands-on approach, we transform concepts into durable, real-world structures that last.</p>
+    </div>
+  </section>
+
+  <section class="section" id="portfolio">
+    <h3>Our Expertise</h3>
+    <div class="card">
+      <h4>⚖️ Residential & Commercial Projects</h4>
+      <p>We handle both large-scale commercial builds and tailored residential projects with the same level of dedication and detail.</p>
+    </div>
+    <div class="card">
+      <h4>⚒️ Project Management</h4>
+      <p>From blueprint to delivery, our project management approach ensures every milestone is met with efficiency.</p>
+    </div>
+    <div class="card">
+      <h4>🚧 Site Safety & Quality Control</h4>
+      <p>We uphold the highest safety and compliance standards across every job site.</p>
+    </div>
+  </section>
+
+  <section class="section" id="contact">
+    <h3>Contact Us</h3>
+    <div class="card">
+      <p><strong>Email:</strong> <a href="mailto:hello@ablockbuilderllc.in.net">hello@ablockbuilderllc.in.net</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+17793618774">+1 (779) 361-8774</a></p>
+      <p><strong>Location:</strong> Fountain Hills, Arizona</p>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 CAP Garland, LLC. All rights reserved.
+    <p>&copy; 2025 A BLOCK BUILDER LLC. All rights reserved.</p>
   </footer>
 </body>
 </html>
